--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@vitejs/plugin-react": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,25 +48,38 @@
     "framer-motion": "latest",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "jiti": "latest",
+    "less": "latest",
+    "lightningcss": "latest",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "15.2.4",
     "next-themes": "^0.4.4",
-    "react": "^18",
+    "path": "latest",
+    "react": "^18.3.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "latest",
     "recharts": "latest",
+    "sass": "latest",
+    "sass-embedded": "latest",
     "sonner": "^1.7.1",
+    "stylus": "latest",
+    "sugarss": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "latest",
+    "tsx": "latest",
     "vaul": "^0.9.6",
+    "vite": "latest",
+    "yaml": "latest",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
